--- a/coding_test/coding_test/sql/cracking_sql_interview.ipynb
+++ b/coding_test/coding_test/sql/cracking_sql_interview.ipynb
@@ -111,12 +111,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from coding_test.sql_commons import DbConnection"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from coding_test.sql_commons import DbConnection\n",
-    "\n",
     "with DbConnection() as db_connection:\n",
     "    con, cur = db_connection\n",
     "    \n",
@@ -162,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,6 +177,7 @@
     "    (\"Alex_Teacher\",),\n",
     "    (\"Arthur_Teacher\",),\n",
     "    (\"Mary_Teacher\",),\n",
+    "    (\"Albert_Teacher\",),\n",
     "]\n",
     "with DbConnection() as db_connection:\n",
     "    con, cur = db_connection\n",
@@ -196,6 +204,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [\n",
+    "    (\"Geography\", 1),\n",
+    "    (\"History\", 2),\n",
+    "    (\"Geometry\", 3),\n",
+    "    (\"Politic\", 1),\n",
+    "]\n",
+    "with DbConnection() as db_connection:\n",
+    "    con, cur = db_connection\n",
+    "    cur.executemany(\"INSERT INTO Courses(CourseName, TeacherId) VALUES(?, ?)\", data)\n",
+    "    con.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [\n",
+    "    (1, 1),\n",
+    "    (1, 2),\n",
+    "    (2, 2),\n",
+    "    (2, 3),\n",
+    "    (2, 4),\n",
+    "    (3, 1),\n",
+    "]\n",
+    "with DbConnection() as db_connection:\n",
+    "    con, cur = db_connection\n",
+    "    cur.executemany(\"INSERT INTO StudentCourses(CourseId, StudentId) VALUES(?, ?)\", data)\n",
+    "    con.commit()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -205,17 +251,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 'Come_Student')\n",
-      "(2, 'Malo_Student')\n",
-      "(3, 'Louison_Student')\n",
-      "(4, 'Montaine_Student')\n"
+      "(1, 'Alex_Teacher')\n",
+      "(2, 'Arthur_Teacher')\n",
+      "(3, 'Mary_Teacher')\n",
+      "(4, 'Albert_Teacher')\n"
      ]
     }
    ],
@@ -224,7 +270,7 @@
     "    con, cur = db_connection\n",
     "    for row in cur.execute(\n",
     "        \"\"\"\n",
-    "        SELECT * FROM Students\n",
+    "        SELECT * FROM Teachers\n",
     "        \"\"\"\n",
     "        ):\n",
     "        print(row)"
@@ -237,15 +283,39 @@
    "source": [
     "# Query 1: Student Enrollment\n",
     "\n",
-    "Implement a query to get a list of all studets and how many courses each student is enrolled in"
+    "Implement a query to get a list of all students and how many courses each student is enrolled in"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'Come_Student', 2)\n",
+      "(2, 'Malo_Student', 2)\n",
+      "(3, 'Louison_Student', 1)\n",
+      "(4, 'Montaine_Student', 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "with DbConnection() as db_connection:\n",
+    "    con, cur = db_connection\n",
+    "    for row in cur.execute(\n",
+    "        \"\"\"\n",
+    "        SELECT Students.StudentId, Students.StudentName, Count(StudentCourses.CourseId)\n",
+    "        FROM Students\n",
+    "        INNER JOIN StudentCourses on Students.StudentId = StudentCourses.StudentId\n",
+    "        INNER JOIN Courses on StudentCourses.CourseId = Courses.CourseId\n",
+    "        GROUP BY Students.StudentId\n",
+    "        \"\"\"\n",
+    "        ):\n",
+    "        print(row)"
+   ]
   },
   {
    "attachments": {},
@@ -263,10 +333,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 'Arthur_Teacher', 3)\n",
+      "(1, 'Alex_Teacher', 2)\n",
+      "(3, 'Mary_Teacher', 1)\n",
+      "(4, 'Albert_Teacher', 0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "with DbConnection() as db_connection:\n",
+    "    con, cur = db_connection\n",
+    "    for row in cur.execute(\n",
+    "        \"\"\"\n",
+    "        SELECT Teachers.TeacherId, Teachers.TeacherName, Count(StudentCourses.StudentId) as StudentCount\n",
+    "        FROM Teachers\n",
+    "        LEFT JOIN Courses on Teachers.TeacherId = Courses.TeacherId\n",
+    "        LEFT JOIN StudentCourses on Courses.CourseId = StudentCourses.CourseId\n",
+    "        GROUP BY Teachers.TeacherId\n",
+    "        ORDER BY StudentCount DESC\n",
+    "        \"\"\"\n",
+    "        ):\n",
+    "        print(row)"
+   ]
   },
   {
    "attachments": {},
