--- a/coding_test/coding_test/sql/sql_be_the_outlier.ipynb
+++ b/coding_test/coding_test/sql/sql_be_the_outlier.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from coding_test.sql_commons import DbConnection"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -14,8 +23,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from coding_test.sql_commons import DbConnection\n",
-    "\n",
     "create_customer_table = \"\"\"\n",
     "CREATE TABLE Customers(\n",
     "    CustomerId INT,\n",
@@ -158,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -166,6 +173,7 @@
      "output_type": "stream",
      "text": [
       "('Jennifer', 'McCarthy', 'NY')\n",
+      "('Alex', 'Muir', 'NY')\n",
       "('William', 'Yang', 'NY')\n"
      ]
     }
@@ -239,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +255,7 @@
      "output_type": "stream",
      "text": [
       "('CT', 2)\n",
-      "('NY', 2)\n"
+      "('NY', 3)\n"
      ]
     }
    ],
@@ -399,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
