--- a/pdf_content_extractor/notebooks/content_extraction.ipynb
+++ b/pdf_content_extractor/notebooks/content_extraction.ipynb
@@ -21,104 +21,56 @@
    "outputs": [],
    "source": [
     "from io import StringIO\n",
-    "# https://github.com/pdfminer/pdfminer.six\n",
     "from pdfminer.high_level import extract_text_to_fp\n",
-    "from pdfminer.layout import LAParams"
+    "from pdfminer.layout import LAParams\n",
+    "from data import PDF_FILE, EPUB_FILE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "output_string = StringIO()\n",
-    "PDF_JONAH_PATH\n",
-    "with open('/home/clem/Documents/corpus/test.pdf', 'rb') as fin:\n",
+    "\n",
+    "with open(PDF_FILE, 'rb') as fin:\n",
     "    extract_text_to_fp(fin, output_string, laparams=LAParams(), output_type='text', codec=None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "17\n",
-      "\n",
-      "Introduction\n",
-      "\n",
-      "Christel Cournil1\n",
-      "\n",
-      "L’élaboration  d’un  tel  ouvrage  portant  sur  les  grandes  affaires  climatiques  peut  étonner  aux \n",
-      "\n",
-      "premiers abords tant le défi est de taille. Certes si l’on s’en tient au contentieux français, – encore \n",
-      "embryonnaire –, les quelques espèces pendantes devant le juge civil ou administratif ne suffisent pas \n",
-      "\n",
-      "pour en faire un ouvrage. Si l’on élargit l’étude du contentieux climatique à l’échelle européenne, \n",
-      "on trouve des espèces particulièrement innovantes sur le plan des stratégies judiciaires engagées \n",
-      "(V. affaire People’s Climate case2) et des recours déjà jugées devant les prétoires nationaux comme la \n",
-      "désormais célèbre affaire néerlandaise Urgenda3. La ligne éditoriale de ce projet a consisté à ne pas se \n",
-      "limiter à cette échelle régionale en en élargissant le champ pour proposer le premier livre commentant \n",
-      "les principales affaires climatiques du monde. Un autre ouvrage collectif en langue anglaise est en \n",
-      "projet4 et un « guide pratique »5 classant les principaux contentieux climatiques devrait être présenté \n",
-      "lors de la prochaine conférence des parties (COP) à Glasgow.\n",
-      "\n",
-      "Cet ouvrage est inédit dans sa démarche. En s’inscrivant dans la tradition juridique des célèbres \n",
-      "« Grands arrêts », cette publication collective émanant de plus d’une trentaine d’auteurs 6 aux profils \n",
-      "d’écriture  variés  (universitaires  confirmés,  jeunes  chercheurs,  avocats,  juristes  d’association)  a \n",
-      "pour  ambition  de  dessiner  les  principaux  contours  de  la  « justice  climatique »7  qui  apparait  gra-\n",
-      "duellement au fil des procès. Ce livre rassemble un échantillon représentatif d’affaires rendues ou \n",
-      "\n",
-      "encore en instance sur des questions climatiques très variées : demande indemnitaire de « victimes \n",
-      "\n",
-      "climatiques », contestation du manque d’ambition climatique des États ou du non-respect des trajec-\n",
-      "\n",
-      "toires de réduction des gaz à effet de serre (GES), demande de désinvestissements dans les énergies \n",
-      "\n",
-      "fossiles, poursuites d’activistes du climat, etc.\n",
-      "\n",
-      "Professeure de droit public (HDR) à Sciences Po Toulouse, membre du LASSP et associée à l’IDPS (Université Sorbonne Paris Nord), \n",
-      "\n",
-      "V. notamment le Commentaire Les « People’s Climate Case » c. Union européenne (E. Brosset et E. Truilhé).\n",
-      "V. les deux commentaires de l’affaire : Cour du District de La Haye, Fondation Urgenda contre Pays-Bas (A.-S. Tabau et C. Cournil) et \n",
-      "\n",
-      "1 \n",
-      "membre de la Structure Fédérative « Les Communs ».\n",
-      "2 \n",
-      "3 \n",
-      "Cour suprême des Pays-Bas, Pays-Bas c. Urgenda, (D. Misonne).\n",
-      "4  W.  Kahl  et  M.-P.  Weller  (eds.),  Climate  Change  Litigation  Liability  and  Damages  from  a  Comparative  Perspective,  à  paraître  en \n",
-      "octobre 2020.\n",
-      "5 \n",
-      "M. Wewerinke-Singh & S. Mead (dir.), Fighting climate change : A best practice guide for judges and courts, IUCN World Commission on \n",
-      "Environmental Law Climate Change Specialist Group : https://www.iucn.org/commissions/world-commission-environmental-law/our-work/\n",
-      "climate-change-specialist-group/fighting-climate-change-a-best-practice-guide-judges-and-courts (27 avril 2020).\n",
-      "6 \n",
-      "7 \n",
-      "\n",
-      "Liste des auteurs dans cet ouvrage. \n",
-      "A. Michelot (dir.), La justice climatique, Bruylant, 2016, 374 p.\n",
-      "\n",
-      "\f\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(output_string.getvalue())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Christel Cournil (dir.)\n",
+      "\n",
+      "Les grandes affaires climatiques\n",
+      "\n",
+      "DICE Éditions\n",
+      "\n",
+      "Introduction\n",
+      "\n",
+      "Christel Cou\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(output_string.getvalue()[:100])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from pdfminer.high_level import extract_text\n",
-    "text = extract_text('/home/clem/Documents/corpus/test.pdf')"
+    "text = extract_text(PDF_FILE)"
    ]
   },
   {
@@ -130,77 +82,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17\n",
+      "Christel Cournil (dir.)\n",
+      "\n",
+      "Les grandes affaires climatiques\n",
+      "\n",
+      "DICE Éditions\n",
       "\n",
       "Introduction\n",
       "\n",
-      "Christel Cournil1\n",
-      "\n",
-      "L’élaboration  d’un  tel  ouvrage  portant  sur  les  grandes  affaires  climatiques  peut  étonner  aux \n",
-      "\n",
-      "premiers abords tant le défi est de taille. Certes si l’on s’en tient au contentieux français, – encore \n",
-      "embryonnaire –, les quelques espèces pendantes devant le juge civil ou administratif ne suffisent pas \n",
-      "\n",
-      "pour en faire un ouvrage. Si l’on élargit l’étude du contentieux climatique à l’échelle européenne, \n",
-      "on trouve des espèces particulièrement innovantes sur le plan des stratégies judiciaires engagées \n",
-      "(V. affaire People’s Climate case2) et des recours déjà jugées devant les prétoires nationaux comme la \n",
-      "désormais célèbre affaire néerlandaise Urgenda3. La ligne éditoriale de ce projet a consisté à ne pas se \n",
-      "limiter à cette échelle régionale en en élargissant le champ pour proposer le premier livre commentant \n",
-      "les principales affaires climatiques du monde. Un autre ouvrage collectif en langue anglaise est en \n",
-      "projet4 et un « guide pratique »5 classant les principaux contentieux climatiques devrait être présenté \n",
-      "lors de la prochaine conférence des parties (COP) à Glasgow.\n",
-      "\n",
-      "Cet ouvrage est inédit dans sa démarche. En s’inscrivant dans la tradition juridique des célèbres \n",
-      "« Grands arrêts », cette publication collective émanant de plus d’une trentaine d’auteurs 6 aux profils \n",
-      "d’écriture  variés  (universitaires  confirmés,  jeunes  chercheurs,  avocats,  juristes  d’association)  a \n",
-      "pour  ambition  de  dessiner  les  principaux  contours  de  la  « justice  climatique »7  qui  apparait  gra-\n",
-      "duellement au fil des procès. Ce livre rassemble un échantillon représentatif d’affaires rendues ou \n",
-      "\n",
-      "encore en instance sur des questions climatiques très variées : demande indemnitaire de « victimes \n",
-      "\n",
-      "climatiques », contestation du manque d’ambition climatique des États ou du non-respect des trajec-\n",
-      "\n",
-      "toires de réduction des gaz à effet de serre (GES), demande de désinvestissements dans les énergies \n",
-      "\n",
-      "fossiles, poursuites d’activistes du climat, etc.\n",
-      "\n",
-      "Professeure de droit public (HDR) à Sciences Po Toulouse, membre du LASSP et associée à l’IDPS (Université Sorbonne Paris Nord), \n",
-      "\n",
-      "V. notamment le Commentaire Les « People’s Climate Case » c. Union européenne (E. Brosset et E. Truilhé).\n",
-      "V. les deux commentaires de l’affaire : Cour du District de La Haye, Fondation Urgenda contre Pays-Bas (A.-S. Tabau et C. Cournil) et \n",
-      "\n",
-      "1 \n",
-      "membre de la Structure Fédérative « Les Communs ».\n",
-      "2 \n",
-      "3 \n",
-      "Cour suprême des Pays-Bas, Pays-Bas c. Urgenda, (D. Misonne).\n",
-      "4  W.  Kahl  et  M.-P.  Weller  (eds.),  Climate  Change  Litigation  Liability  and  Damages  from  a  Comparative  Perspective,  à  paraître  en \n",
-      "octobre 2020.\n",
-      "5 \n",
-      "M. Wewerinke-Singh & S. Mead (dir.), Fighting climate change : A best practice guide for judges and courts, IUCN World Commission on \n",
-      "Environmental Law Climate Change Specialist Group : https://www.iucn.org/commissions/world-commission-environmental-law/our-work/\n",
-      "climate-change-specialist-group/fighting-climate-change-a-best-practice-guide-judges-and-courts (27 avril 2020).\n",
-      "6 \n",
-      "7 \n",
-      "\n",
-      "Liste des auteurs dans cet ouvrage. \n",
-      "A. Michelot (dir.), La justice climatique, Bruylant, 2016, 374 p.\n",
-      "\n",
-      "\f\n"
+      "Christel Cou\n"
      ]
     }
    ],
    "source": [
-    "print(text)"
+    "print(text[:100])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pdf2image'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpdf_content_extraction\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpdf_preprocessing\u001b[39;00m \u001b[39mimport\u001b[39;00m preprocess_pdf_file\n",
+      "File \u001b[0;32m~/Documents/source/sandbox/pdf_content_extractor/pdf_content_extraction/pdf_preprocessing.py:4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39manyio\u001b[39;00m \u001b[39mimport\u001b[39;00m Path\n\u001b[1;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpypdf\u001b[39;00m \u001b[39mimport\u001b[39;00m PdfReader\n\u001b[0;32m----> 4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpdf2image\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpytesseract\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpt\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[39m# https://pypdf.readthedocs.io/en/latest/user/extract-text.html\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pdf2image'"
+     ]
+    }
+   ],
    "source": [
-    "from naat_core.data import preprocess_pdf_file"
+    "from pdf_content_extraction.pdf_preprocessing import preprocess_pdf_file"
    ]
   },
   {
