--- a/coding_test/coding_test/datascience/ml_commons.ipynb
+++ b/coding_test/coding_test/datascience/ml_commons.ipynb
@@ -421,6 +421,94 @@
     "\n",
     "np.mean(predicted_svm == twenty_test.target)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question\n",
+    "You want to create a machine learning algorithm that finds the top 100 people who have shared photographs of themselves on social media. What is the best machine learning method to use ?\n",
+    "* [ ] K-nearest neighbor\n",
+    "* [ ] binary classification\n",
+    "* [ ] unsupervised learning\n",
+    "* [ ] reinforcement learning\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question\n",
+    "\n",
+    "Which pattern exhibits the following figure of the fit line and data?\n",
+    "![alt](figure-1.png)\n",
+    "\n",
+    "* [ ] high bias, low variance\n",
+    "* [ ] high bias, high variance\n",
+    "* [ ] low bias, low variance\n",
+    "* [ ] low bias, high variance\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question\n",
+    "\n",
+    "You want to create a machine learning algorithm to identify food recipes on the web. To do this, you create an algorithm that looks at different conditional probabilities. So if the post includes the word *flour*, it has a slightly stronger probability of being a recipe. If it contains both *flour* and *sugar*, is is even more likely a recipe. What type of algorithm are you using?\n",
+    "* [ ] K-nearest neighbor\n",
+    "* [ ] naive Bayes classifier\n",
+    "* [ ] multiclass classification\n",
+    "* [ ] decision tree\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question\n",
+    "In statistics, what is defined as the probability of a hypothesis test of finding an effect, if there is an effect to be found?\n",
+    "* [ ] significance\n",
+    "* [ ] alpha\n",
+    "* [ ] power\n",
+    "* [ ] confidence\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question\n",
+    "You create a decision tree to show whether someone decides to go to the beach. There are three factors in this decision: rainy, overcast and sunny. What are these three factors called?\n",
+    "* [ ] predictors\n",
+    "* [ ] tree nodes\n",
+    "* [ ] deciders\n",
+    "* [ ] root nodes\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question\n",
+    "You are part of a data science team that is working for a national fast-food chain. You create a simple report that shows a trend: Customers who visit the store more often and buy smaller meals spend more than customers who visit less frequently and buy larger meals. What is the most likely diagram that your team created?\n",
+    "\n",
+    "* [ ] multiclass classification diagram\n",
+    "* [ ] linear regression and scatter plots\n",
+    "* [ ] K-means cluster diagram\n",
+    "* [ ] pivot table\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
