--- a/coding_test/coding_test/datascience/decision-trees.ipynb
+++ b/coding_test/coding_test/datascience/decision-trees.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "More generally, the main issue is that they are very sensitive to small variation in the training data. Actually, since the training algorithm used by Scikit-Learn is stochastic (randomly selects the set of features to evaluate at each node), you may get very different models even on the same training data, unless you set the `random_state` hyperparameter.\n",
     "\n",
-    "Random Forests car limit this instability by averagin predictions over many trees."
+    "Random Forests can limit this instability by averaging predictions over many trees."
    ]
   },
   {
