--- a/geo-analysis/notebooks/source_to_soldhouses.ipynb
+++ b/geo-analysis/notebooks/source_to_soldhouses.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from data import ELECTRICAL_SUBSTATIONS, SOLD_HOUSE_PRICES\n",
+    "from data import ELECTRICAL_SUBSTATIONS, CLEAN_SOLD_HOUSE_PRICES\n",
     "import pandas as pd\n",
     "import geojson\n",
     "from sklearn.metrics.pairwise import haversine_distances\n",
@@ -42,7 +42,7 @@
     "with open(ELECTRICAL_SUBSTATIONS, \"r\") as f:\n",
     "    substations = geojson.load(f)\n",
     "\n",
-    "sellprices_df = pd.read_csv(SOLD_HOUSE_PRICES)"
+    "sellprices_df = pd.read_csv(CLEAN_SOLD_HOUSE_PRICES)"
    ]
   },
   {
@@ -81,8 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "soldhouse_prices = sellprices_df.dropna(subset=[\"longitude\", \"latitude\", \"valeur_fonciere\"]).reset_index(drop=True)\n",
-    "soldhouse_prices_array = soldhouse_prices[[\"latitude\", \"longitude\"]].to_numpy()"
+    "soldhouse_prices_array = sellprices_df[[\"latitude\", \"longitude\"]].to_numpy()"
    ]
   },
   {
@@ -148,17 +147,17 @@
    "source": [
     "coordinates = []\n",
     "\n",
-    "soldhouse_prices[\"substation_distance\"] = min_distances\n",
-    "soldhouse_prices[\"substation_index\"] = min_substation_indices\n",
+    "sellprices_df[\"substation_distance\"] = min_distances\n",
+    "sellprices_df[\"substation_index\"] = min_substation_indices\n",
     "\n",
     "min_distances = np.array(min_distances)\n",
     "min_substation_indices = np.array(min_substation_indices)\n",
     "\n",
-    "soldhouse_prices[\"substation_latitude\"] = soldhouse_prices[\"substation_index\"].apply(lambda x: substation_coordinates[x][0])\n",
-    "soldhouse_prices[\"substation_longitude\"] = soldhouse_prices[\"substation_index\"].apply(lambda x: substation_coordinates[x][1])\n",
-    "soldhouse_prices[\"substation_dapartement\"] = soldhouse_prices[\"substation_index\"].apply(lambda x: substation_departements[x])\n",
+    "sellprices_df[\"substation_latitude\"] = sellprices_df[\"substation_index\"].apply(lambda x: substation_coordinates[x][0])\n",
+    "sellprices_df[\"substation_longitude\"] = sellprices_df[\"substation_index\"].apply(lambda x: substation_coordinates[x][1])\n",
+    "sellprices_df[\"substation_dapartement\"] = sellprices_df[\"substation_index\"].apply(lambda x: substation_departements[x])\n",
     "\n",
-    "soldhouse_prices[\"m2_price\"] = soldhouse_prices[\"valeur_fonciere\"] / soldhouse_prices[\"surface_reelle_bati\"]"
+    "sellprices_df[\"m2_price\"] = sellprices_df[\"valeur_fonciere\"] / sellprices_df[\"surface_reelle_bati\"]"
    ]
   },
   {
@@ -568,7 +567,7 @@
     }
    ],
    "source": [
-    "selected_houses = soldhouse_prices.copy()\n",
+    "selected_houses = sellprices_df.copy()\n",
     "\n",
     "selected_houses = selected_houses[selected_houses[\"substation_distance\"] <= 0.1]\n",
     "selected_houses = selected_houses[selected_houses[\"m2_price\"] <= 5000.0]\n",
